added adaptive for features section

--- a/index.html
+++ b/index.html
@@ -227,86 +227,124 @@
           </ul>
         </section>
         <section class="features">
-					<div class="features__content">
-						<span class="features__content-subtitle">Features</span>
-						<h2 class="features__content-title">
-							Easily find leads and customers
-						</h2>
-						<p class="features__content-description">
-							Send one-off and automated email, push, and in-app messages to
-							people. Create better stories.
-						</p>
-						<h3 class="features__content-sub">Acquire new customers</h3>
-						<p class="features__content-text">
-							Everything you need to start building – including open-source
-							code, documentation.
-						</p>
-						<div
-							class="features__content-divider features__divider--blue"
-						></div>
-						<span class="features__content-info">Engage users</span>
-						<div class="features__content-divider"></div>
-						<span class="features__content-info">Develop across platforms</span>
-						<div class="features__content-divider"></div>
-						<img
-							class="features__content-img"
-							src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hidden-ouch.png"
-							alt="Hidden ouch"
-						/>
-					</div>
-					<figure>
-						<picture>
-								<source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-asquire-customer.png" type="image/png" media="(max-width: 1320px)">
-								<img class="features__image" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/invision-screen.png" alt="In Space">
-						</picture>
-						<figcaption class="features__image-caption">A better way to acquire new users</figcaption>
-				</figure>
-				
-				</section>
-        <!-- <section class="manage">
-					<div class="manage__wheel">
-						<img
-							class="manage__wheel-image"
-							src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/wheel.png"
-							alt="wheel image"
-						/>
-						<span class="manage__wheel-text"
-							>Connect with customers and grow faster</span
-						>
-					</div>
-					<div class="manage__content">
-						<div class="manage__content-inner">
-							<span class="manage__content-inner-decor">Team Inbox</span>
-							<h2 class="manage__content-inner-title">Manage conversations</h2>
-							<p class="manage__content-inner-description">
-								One place to manage and respond to all conversations with leads
-								and users. Receive messages from leads.
-							</p>
-						</div>
-						<blockquote class="manage__content-blockquote">
-							<span class="manage__content-blockquote-text"
-								>“Great widgets. Great selection. Great design and
-								<strong> easy to implement. </strong> Definitely a huge time
-								saver for a web developer!”</span
-							>
-							<div class="manage__content-blockquote-info">
-								<img
-									class="blockquote-info__avatar"
-									src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-avatar.png"
-									alt="avatar"
-								/>
-								<div class="blockquote-info__text">
-									<cite class="blockquote-info__text-author"
-										>Viella Malkovich
-									</cite>
-									<span class="blockquote-info__text-position"
-										>Creative Director at Johnson</span
-									>
-								</div>
-							</div>
-						</blockquote>
-					</div>
-				</section> -->
+          <div class="features__content">
+            <span class="features__content-subtitle">Features</span>
+            <span class="features__content-subtitle features__content-subtitle--mobile">Acquire Customers</span>
+            <h2 class="features__content-title">Easily find leads and customers</h2>
+            <p class="features__content-description">
+              Send one-off and automated email, push, and in-app messages to people. Create better
+              stories.
+            </p>
+            <h3 class="features__content-sub">Acquire new customers</h3>
+            <p class="features__content-text">
+              Everything you need to start building – including open-source code, documentation.
+            </p>
+            <div class="features__content-divider features__divider--blue"></div>
+            <span class="features__content-info">Engage users</span>
+            <div class="features__content-divider"></div>
+            <span class="features__content-info">Develop across platforms</span>
+            <div class="features__content-divider"></div>
+            <img
+              class="features__content-img"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hidden-ouch.png"
+              alt="Hidden ouch"
+            />
+          </div>
+          <figure>
+            <picture>
+              <source
+                srcset="
+                  https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-asquire-customer.png
+                "
+                type="image/png"
+                media="(max-width: 1320px)"
+              />
+              <img
+                class="features__image"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/invision-screen.png"
+                alt="In Space"
+              />
+            </picture>
+            <figcaption class="features__image-caption">
+              A better way to acquire new users
+            </figcaption>
+          </figure>
+        </section>
+				<section class="engage">
+          <div class="engage__content">
+            <span class="engage__content-sub">Engage Users</span>
+            <h2 class="engage__content-title">Engage with your audience</h2>
+            <p class="engage__content-description">
+              Send one-off and automated email, push, and in-app messages to people. Create better stories.
+            </p>
+            <figure class="engage__content-figure">
+              <img
+                class="engage__content-figure-image"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-engage-user.png"
+                alt="Mirror image"
+              />
+              <figcaption class="engage__content-figure-caption">
+                Knowledge base and smart self-service
+              </figcaption>
+            </figure>
+          </div>
+          <div class="engage__content">
+            <span class="engage__content-sub">Support</span>
+            <h2 class="engage__content-title">The best customer experiences</h2>
+            <p class="engage__content-description">
+              A beautifully simple system for tracking, prioritizing, and solving customer support tickets.
+            </p>
+            <figure class="engage__content-figure">
+              <img
+                class="engage__content-figure-image"
+                src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/tip-support.png"
+                alt="TV image"
+              />
+              <figcaption class="engage__content-figure-caption">
+                Live chat and messaging
+              </figcaption>
+            </figure>
+          </div>
+        </section>
+        <section class="manage">
+          <div class="manage__wheel">
+            <img
+              class="manage__wheel-image"
+              src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/wheel.png"
+              alt="wheel image"
+            />
+            <span class="manage__wheel-text">Connect with customers and grow faster</span>
+          </div>
+          <div class="manage__content">
+            <div class="manage__content-inner">
+              <span class="manage__content-inner-decor">Team Inbox</span>
+              <h2 class="manage__content-inner-title">Manage conversations</h2>
+              <p class="manage__content-inner-description">
+                One place to manage and respond to all conversations with leads and users. Receive
+                messages from leads.
+              </p>
+            </div>
+            <blockquote class="manage__content-blockquote">
+              <span class="manage__content-blockquote-text"
+                >“Great widgets. Great selection. Great design and
+                <strong> easy to implement. </strong> Definitely a huge time saver for a web
+                developer!”</span
+              >
+              <div class="manage__content-blockquote-info">
+                <img
+                  class="blockquote-info__avatar"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-avatar.png"
+                  alt="avatar"
+                />
+                <div class="blockquote-info__text">
+                  <cite class="blockquote-info__text-author">Viella Malkovich </cite>
+                  <span class="blockquote-info__text-position">Creative Director at Johnson</span>
+                </div>
+              </div>
+            </blockquote>
+          </div>
+        </section>
+
         <!-- <section class="communicate">
 					<div class="communicate__inner">
 						<div class="communicate__content">
