added adaptive for manage section

--- a/index.html
+++ b/index.html
@@ -344,8 +344,7 @@
             </blockquote>
           </div>
         </section>
-
-        <!-- <section class="communicate">
+        <section class="communicate">
 					<div class="communicate__inner">
 						<div class="communicate__content">
 							<div class="communicate__content-wrap">
@@ -396,7 +395,7 @@
 							</div>
 						</div>
 					</div>
-				</section> -->
+				</section>
         <!-- <section class="audience">
 					<div class="audience__inner">
 						<div class="audience__content">
