added adaptive for communicate section

--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
         <section class="features">
           <div class="features__content">
             <span class="features__content-subtitle">Features</span>
-            <span class="features__content-subtitle features__content-subtitle--mobile">Acquire Customers</span>
+            <span class="features__content-subtitle features__content-subtitle--mobile"
+              >Acquire Customers</span
+            >
             <h2 class="features__content-title">Easily find leads and customers</h2>
             <p class="features__content-description">
               Send one-off and automated email, push, and in-app messages to people. Create better
@@ -270,12 +272,13 @@
             </figcaption>
           </figure>
         </section>
-				<section class="engage">
+        <section class="engage">
           <div class="engage__content">
             <span class="engage__content-sub">Engage Users</span>
             <h2 class="engage__content-title">Engage with your audience</h2>
             <p class="engage__content-description">
-              Send one-off and automated email, push, and in-app messages to people. Create better stories.
+              Send one-off and automated email, push, and in-app messages to people. Create better
+              stories.
             </p>
             <figure class="engage__content-figure">
               <img
@@ -292,7 +295,8 @@
             <span class="engage__content-sub">Support</span>
             <h2 class="engage__content-title">The best customer experiences</h2>
             <p class="engage__content-description">
-              A beautifully simple system for tracking, prioritizing, and solving customer support tickets.
+              A beautifully simple system for tracking, prioritizing, and solving customer support
+              tickets.
             </p>
             <figure class="engage__content-figure">
               <img
@@ -345,57 +349,55 @@
           </div>
         </section>
         <section class="communicate">
-					<div class="communicate__inner">
-						<div class="communicate__content">
-							<div class="communicate__content-wrap">
-								<span class="communicate__content-decor"
-									>Communicate Better</span
-								>
-								<h2 class="communicate__content-title">
-									Built for busy small teams
-								</h2>
-								<p class="communicate__content-description">
-									Three products that can be used independently or combined
-									together for your company’s needs.
-								</p>
-								<button class="button-blue">Get Started</button>
-							</div>
-							<img
-								class="communicate__content-image"
-								src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hand-with-phone.png"
-								alt="A better way to acquire new users"
-							/>
-						</div>
-						<div class="communicate__list">
-							<div class="communicate__list-item">
-								<p class="list-item__desc">
-									<strong>Subscriptions.</strong> Foundation works with the
-									tools and services you already use every day.
-								</p>
-								<a class="list-item__link" href="#"
-									>Learn more about subscriptions</a
-								>
-							</div>
-							<div class="communicate__list-item">
-								<p class="list-item__desc">
-									<strong>Flexible Hours.</strong> Get started with our simple
-									snippet of JavaScript or easy to install SDKs for iOS and
-									Android.
-								</p>
-								<a class="list-item__link" href="#"
-									>Get more info about hours</a
-								>
-							</div>
-							<div class="communicate__list-item">
-								<p class="list-item__desc">
-									<strong>Fast Communication.</strong> We offer measures like
-									2FA and SSO to ensure the safety of your data.
-								</p>
-								<a class="list-item__link" href="#">Communication guidelines</a>
-							</div>
-						</div>
-					</div>
-				</section>
+          <div class="communicate__inner">
+            <div class="communicate__content">
+              <div class="communicate__content-wrap">
+                <span class="communicate__content-decor">Communicate Better</span>
+                <h2 class="communicate__content-title">Built for busy small teams</h2>
+                <p class="communicate__content-description">
+                  Three products that can be used independently or combined together for your
+                  company’s needs.
+                </p>
+                <button class="button-blue">Get Started</button>
+                <div class="communicate__content-divider"></div>
+              </div>
+              <figure class="communicate__content-figure">
+                <img
+                  class="communicate__content-figure-image"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/hand-with-phone.png"
+                  alt="Mobile image"
+                />
+                <figcaption class="communicate__content-figure-caption">
+                  A better way to acquire new users
+                </figcaption>
+              </figure>
+            </div>
+						<div class="communicate__content-divider communicate__content-divider--mobile"></div>
+            <div class="communicate__list">
+              <div class="communicate__list-item">
+                <p class="list-item__desc">
+                  <strong>Subscriptions.</strong> Foundation works with the tools and services you
+                  already use every day.
+                </p>
+                <a class="list-item__link" href="#">Learn more about subscriptions</a>
+              </div>
+              <div class="communicate__list-item">
+                <p class="list-item__desc">
+                  <strong>Flexible Hours.</strong> Get started with our simple snippet of JavaScript
+                  or easy to install SDKs for iOS and Android.
+                </p>
+                <a class="list-item__link" href="#">Get more info about hours</a>
+              </div>
+              <div class="communicate__list-item">
+                <p class="list-item__desc">
+                  <strong>Fast Communication.</strong> We offer measures like 2FA and SSO to ensure
+                  the safety of your data.
+                </p>
+                <a class="list-item__link" href="#">Communication guidelines</a>
+              </div>
+            </div>
+          </div>
+        </section>
         <!-- <section class="audience">
 					<div class="audience__inner">
 						<div class="audience__content">
