--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             </div>
           </div>
         </section>
-        <!-- <section class="audience">
+        <section class="audience">
 					<div class="audience__inner">
 						<div class="audience__content">
 							<span class="audience__content-decor">Engage Visitors</span>
@@ -457,7 +457,7 @@
 							</ul>
 						</div>
 					</div>
-				</section> -->
+				</section>
         <!-- <section class="partners">
 					<div class="partners__inner partners__inner--copy">
 						<ul class="partners__list">
