added adaptive for partners-2 section

--- a/index.html
+++ b/index.html
@@ -458,66 +458,64 @@
 						</div>
 					</div>
 				</section>
-        <!-- <section class="partners">
-					<div class="partners__inner partners__inner--copy">
-						<ul class="partners__list">
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
-										alt="New York Times"
-									/>
-								</a>
-							</li>
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
-										alt="Forbes"
-									/>
-								</a>
-							</li>
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
-										alt="Apple"
-									/>
-								</a>
-							</li>
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
-										alt="Mashable"
-									/>
-								</a>
-							</li>
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
-										alt="WSJ"
-									/>
-								</a>
-							</li>
-							<li class="partners__list-item">
-								<a class="partners__list-item-link" href="#">
-									<img
-										class="partners__list-item-logo"
-										src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
-										alt="Google"
-									/>
-								</a>
-							</li>
-						</ul>
-					</div>
-				</section> -->
+				<section class="partners">
+          <ul class="partners__list">
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-nyt.png"
+                  alt="New York Times"
+                />
+              </a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-forbes.png"
+                  alt="Forbes"
+                />
+              </a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-apple.png"
+                  alt="Apple"
+                />
+              </a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-mashable.png"
+                  alt="Mashable"
+                />
+              </a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-wsj.png"
+                  alt="WSJ"
+                />
+              </a>
+            </li>
+            <li class="partners__list-item">
+              <a class="partners__list-item-link" href="#">
+                <img
+                  class="partners__list-item-logo"
+                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/logo-google.png"
+                  alt="Google"
+                />
+              </a>
+            </li>
+          </ul>
+        </section>
         <!-- <section class="feedback">
 					<h2 class="feedback__title">
 						Trusted by the world’s most innovative businesses – big and small
