added adaptive for feedback section

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 </figcaption>
               </figure>
             </div>
-						<div class="communicate__content-divider communicate__content-divider--mobile"></div>
+            <div class="communicate__content-divider communicate__content-divider--mobile"></div>
             <div class="communicate__list">
               <div class="communicate__list-item">
                 <p class="list-item__desc">
@@ -399,66 +399,66 @@
           </div>
         </section>
         <section class="audience">
-					<div class="audience__inner">
-						<div class="audience__content">
-							<span class="audience__content-decor">Engage Visitors</span>
-							<h2 class="audience__content-title">Understand your audience</h2>
-							<p class="audience__content-description">
-								Early stage company? Eligible applicants get all of our products
-								for just $49 a month.
-							</p>
-							<div class="audience__content-buttons">
-								<button class="button-blue">Get Started</button>
-								<button class="button-white">Learn More</button>
-							</div>
-						</div>
-						<div class="audience__cards cards">
-							<ul class="cards__list">
-								<a class="cards__list-link" href="#">
-									<li class="cards__list-item">
-										<img
-											class="cards__list-item-img"
-											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
-											alt="user-role"
-										/>
-										<span class="cards__list-title">Developers</span>
-									</li>
-								</a>
-								<a class="cards__list-link" href="#">
-									<li class="cards__list-item">
-										<img
-											class="cards__list-item-img"
-											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
-											alt="user-role"
-										/>
-										<span class="cards__list-title">Entertainment</span>
-									</li>
-								</a>
-								<a class="cards__list-link" href="#">
-									<li class="cards__list-item">
-										<img
-											class="cards__list-item-img"
-											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
-											alt="user-role"
-										/>
-										<span class="cards__list-title">Athletes</span>
-									</li>
-								</a>
-								<a class="cards__list-link" href="">
-									<li class="cards__list-item">
-										<img
-											class="cards__list-item-img"
-											src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
-											alt="user-role"
-										/>
-										<span class="cards__list-title">Creators</span>
-									</li>
-								</a>
-							</ul>
-						</div>
-					</div>
-				</section>
-				<section class="partners">
+          <div class="audience__inner">
+            <div class="audience__content">
+              <span class="audience__content-decor">Engage Visitors</span>
+              <h2 class="audience__content-title">Understand your audience</h2>
+              <p class="audience__content-description">
+                Early stage company? Eligible applicants get all of our products for just $49 a
+                month.
+              </p>
+              <div class="audience__content-buttons">
+                <button class="button-blue">Get Started</button>
+                <button class="button-white">Learn More</button>
+              </div>
+            </div>
+            <div class="audience__cards cards">
+              <ul class="cards__list">
+                <a class="cards__list-link" href="#">
+                  <li class="cards__list-item">
+                    <img
+                      class="cards__list-item-img"
+                      src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-1.png"
+                      alt="user-role"
+                    />
+                    <span class="cards__list-title">Developers</span>
+                  </li>
+                </a>
+                <a class="cards__list-link" href="#">
+                  <li class="cards__list-item">
+                    <img
+                      class="cards__list-item-img"
+                      src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
+                      alt="user-role"
+                    />
+                    <span class="cards__list-title">Entertainment</span>
+                  </li>
+                </a>
+                <a class="cards__list-link" href="#">
+                  <li class="cards__list-item">
+                    <img
+                      class="cards__list-item-img"
+                      src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-3.png"
+                      alt="user-role"
+                    />
+                    <span class="cards__list-title">Athletes</span>
+                  </li>
+                </a>
+                <a class="cards__list-link" href="">
+                  <li class="cards__list-item">
+                    <img
+                      class="cards__list-item-img"
+                      src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-4.png"
+                      alt="user-role"
+                    />
+                    <span class="cards__list-title">Creators</span>
+                  </li>
+                </a>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="partners">
           <ul class="partners__list">
             <li class="partners__list-item">
               <a class="partners__list-item-link" href="#">
@@ -516,135 +516,109 @@
             </li>
           </ul>
         </section>
-        <!-- <section class="feedback">
-					<h2 class="feedback__title">
-						Trusted by the world’s most innovative businesses – big and small
-					</h2>
-					<div class="swiper my-swiper">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<blockquote class="feedback__blockquote">
-									<p class="feedback__blockquote-text">
-										“Comprehensive set of startup tools for all imaginable
-										entrepreneurial needs. Create landing pages, send emails,
-										find freelancers. Perfect for sales, marketing, and support”
-									</p>
-									<cite class="feedback__blockquote-author"
-										>Viella Malkovich</cite
-									>
-									<span class="feedback__blockquote-role"
-										>Creative Director at Johnson</span
-									>
-								</blockquote>
-							</div>
-							<div class="swiper-slide">
-								<blockquote class="feedback__blockquote">
-									<p class="feedback__blockquote-text">
-										“Comprehensive set of startup tools for all imaginable
-										entrepreneurial needs. Create landing pages, send emails,
-										find freelancers. Perfect for sales, marketing, and support”
-									</p>
-									<cite class="feedback__blockquote-author"
-										>Viella Malkovich</cite
-									>
-									<span class="feedback__blockquote-role"
-										>Creative Director at Johnson</span
-									>
-								</blockquote>
-							</div>
-							<div class="swiper-slide">
-								<blockquote class="feedback__blockquote">
-									<p class="feedback__blockquote-text">
-										“Comprehensive set of startup tools for all imaginable
-										entrepreneurial needs. Create landing pages, send emails,
-										find freelancers. Perfect for sales, marketing, and support”
-									</p>
-									<cite class="feedback__blockquote-author"
-										>Viella Malkovich</cite
-									>
-									<span class="feedback__blockquote-role"
-										>Creative Director at Johnson</span
-									>
-								</blockquote>
-							</div>
-							<div class="swiper-slide">
-								<blockquote class="feedback__blockquote">
-									<p class="feedback__blockquote-text">
-										“Comprehensive set of startup tools for all imaginable
-										entrepreneurial needs. Create landing pages, send emails,
-										find freelancers. Perfect for sales, marketing, and support”
-									</p>
-									<cite class="feedback__blockquote-author"
-										>Viella Malkovich</cite
-									>
-									<span class="feedback__blockquote-role"
-										>Creative Director at Johnson</span
-									>
-								</blockquote>
-							</div>
-							<div class="swiper-slide">
-								<blockquote class="feedback__blockquote">
-									<p class="feedback__blockquote-text">
-										“Comprehensive set of startup tools for all imaginable
-										entrepreneurial needs. Create landing pages, send emails,
-										find freelancers. Perfect for sales, marketing, and support”
-									</p>
-									<cite class="feedback__blockquote-author"
-										>Viella Malkovich</cite
-									>
-									<span class="feedback__blockquote-role"
-										>Creative Director at Johnson</span
-									>
-								</blockquote>
-							</div>
-						</div>
-						<div class="swiper-pagination"></div>
-					</div>
-					<img
-						class="feedback__image"
-						src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/balloon.png"
-						alt="ballon"
-					/>
-				</section> -->
-        <!-- <section class="hiring">
-					<div class="hiring__content">
-						<h2 class="hiring__content-title">We’re hiring</h2>
-						<p class="hiring__content-description">
-							We’re a team of lifelong learners. We’re equal parts left and
-							right brained.
-						</p>
-						<button class="button-blue">More about Company</button>
-					</div>
-					<ul class="hiring__list">
-						<li class="hiring__item">
-							<a href="#" class="hiring__link">
-								<span class="hiring__link-role">Front-End Developer</span>
-								<span class="hiring__link-location">Los Angeles / Remote</span>
-								<span class="hiring__link-arrow"
-									><i class="fas fa-chevron-right"></i
-								></span>
-							</a>
-						</li>
-						<li class="hiring__item">
-							<a href="#" class="hiring__link">
-								<span class="hiring__link-role">Community Manager</span>
-								<span class="hiring__link-location">New York / Full-Time</span>
-								<span class="hiring__link-arrow"
-									><i class="fas fa-chevron-right"></i
-								></span>
-							</a>
-						</li>
-						<li class="hiring__item">
-							<a href="#" class="hiring__link">
-								<span class="hiring__link-role">UX/UI Designer</span>
-								<span class="hiring__link-location">New York / Full-Time</span>
-								<span class="hiring__link-arrow"
-									><i class="fas fa-chevron-right"></i
-								></span>
-							</a>
-						</li>
-					</ul>
-				</section> -->
+        <section class="feedback">
+          <h2 class="feedback__title">
+            Trusted by the world’s most innovative businesses – big and small
+          </h2>
+          <!-- Swiper Slider -->
+          <div class="swiper my-swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <blockquote class="feedback__blockquote">
+                  <p class="feedback__blockquote-text">
+                    “Comprehensive set of startup tools for all imaginable entrepreneurial needs.
+                    Create landing pages, send emails, find freelancers. Perfect for sales,
+                    marketing, and support”
+                  </p>
+                  <cite class="feedback__blockquote-author">Viella Malkovich</cite>
+                  <span class="feedback__blockquote-role">Creative Director at Johnson</span>
+                </blockquote>
+              </div>
+              <div class="swiper-slide">
+                <blockquote class="feedback__blockquote">
+                  <p class="feedback__blockquote-text">
+                    “Comprehensive set of startup tools for all imaginable entrepreneurial needs.
+                    Create landing pages, send emails, find freelancers. Perfect for sales,
+                    marketing, and support”
+                  </p>
+                  <cite class="feedback__blockquote-author">Viella Malkovich</cite>
+                  <span class="feedback__blockquote-role">Creative Director at Johnson</span>
+                </blockquote>
+              </div>
+              <div class="swiper-slide">
+                <blockquote class="feedback__blockquote">
+                  <p class="feedback__blockquote-text">
+                    “Comprehensive set of startup tools for all imaginable entrepreneurial needs.
+                    Create landing pages, send emails, find freelancers. Perfect for sales,
+                    marketing, and support”
+                  </p>
+                  <cite class="feedback__blockquote-author">Viella Malkovich</cite>
+                  <span class="feedback__blockquote-role">Creative Director at Johnson</span>
+                </blockquote>
+              </div>
+              <div class="swiper-slide">
+                <blockquote class="feedback__blockquote">
+                  <p class="feedback__blockquote-text">
+                    “Comprehensive set of startup tools for all imaginable entrepreneurial needs.
+                    Create landing pages, send emails, find freelancers. Perfect for sales,
+                    marketing, and support”
+                  </p>
+                  <cite class="feedback__blockquote-author">Viella Malkovich</cite>
+                  <span class="feedback__blockquote-role">Creative Director at Johnson</span>
+                </blockquote>
+              </div>
+              <div class="swiper-slide">
+                <blockquote class="feedback__blockquote">
+                  <p class="feedback__blockquote-text">
+                    “Comprehensive set of startup tools for all imaginable entrepreneurial needs.
+                    Create landing pages, send emails, find freelancers. Perfect for sales,
+                    marketing, and support”
+                  </p>
+                  <cite class="feedback__blockquote-author">Viella Malkovich</cite>
+                  <span class="feedback__blockquote-role">Creative Director at Johnson</span>
+                </blockquote>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <img
+            class="feedback__image"
+            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/balloon.png"
+            alt="ballon"
+          />
+        </section>
+        <section class="hiring">
+          <div class="hiring__content">
+            <h2 class="hiring__content-title">We’re hiring</h2>
+            <p class="hiring__content-description">
+              We’re a team of lifelong learners. We’re equal parts left and right brained.
+            </p>
+            <button class="button-blue">More about Company</button>
+          </div>
+          <ul class="hiring__list">
+            <li class="hiring__item">
+              <a href="#" class="hiring__link">
+                <span class="hiring__link-role">Front-End Developer</span>
+                <span class="hiring__link-location">Los Angeles / Remote</span>
+                <span class="hiring__link-arrow"><i class="fas fa-chevron-right"></i></span>
+              </a>
+            </li>
+            <li class="hiring__item">
+              <a href="#" class="hiring__link">
+                <span class="hiring__link-role">Community Manager</span>
+                <span class="hiring__link-location">New York / Full-Time</span>
+                <span class="hiring__link-arrow"><i class="fas fa-chevron-right"></i></span>
+              </a>
+            </li>
+            <li class="hiring__item">
+              <a href="#" class="hiring__link">
+                <span class="hiring__link-role">UX/UI Designer</span>
+                <span class="hiring__link-location">New York / Full-Time</span>
+                <span class="hiring__link-arrow"><i class="fas fa-chevron-right"></i></span>
+              </a>
+            </li>
+          </ul>
+        </section>
         <!-- <section class="subscription">
 					<img
 						class="subscription__image"
