--- a/index.html
+++ b/index.html
@@ -593,30 +593,36 @@
             <p class="hiring__content-description">
               We’re a team of lifelong learners. We’re equal parts left and right brained.
             </p>
-            <button class="button-blue">More about Company</button>
+            <button class="button-blue hiring__content-btn">More about Company</button>
           </div>
           <ul class="hiring__list">
-            <li class="hiring__item">
-              <a href="#" class="hiring__link">
-                <span class="hiring__link-role">Front-End Developer</span>
-                <span class="hiring__link-location">Los Angeles / Remote</span>
-                <span class="hiring__link-arrow"><i class="fas fa-chevron-right"></i></span>
-              </a>
-            </li>
-            <li class="hiring__item">
-              <a href="#" class="hiring__link">
-                <span class="hiring__link-role">Community Manager</span>
-                <span class="hiring__link-location">New York / Full-Time</span>
-                <span class="hiring__link-arrow"><i class="fas fa-chevron-right"></i></span>
-              </a>
-            </li>
-            <li class="hiring__item">
-              <a href="#" class="hiring__link">
-                <span class="hiring__link-role">UX/UI Designer</span>
-                <span class="hiring__link-location">New York / Full-Time</span>
-                <span class="hiring__link-arrow"><i class="fas fa-chevron-right"></i></span>
-              </a>
-            </li>
+            <a href="#" class="hiring__link">
+              <li class="hiring__item">
+                <div class='hiring__item-info'>
+									<span class="hiring__item-info-role">Front-End Developer</span>
+									<span class="hiring__item-info-location">Los Angeles / Remote</span>
+								</div>
+                <span class="hiring__item-arrow"><i class="fas fa-chevron-right"></i></span>
+              </li>
+            </a>
+            <a href="#" class="hiring__link">
+              <li class="hiring__item">
+                <div class='hiring__item-info'>
+									<span class="hiring__item-info-role">Community Manager</span>
+									<span class="hiring__item-info-location">New York / Full-Time</span>
+								</div>
+                <span class="hiring__item-arrow"><i class="fas fa-chevron-right"></i></span>
+              </li>
+            </a>
+            <a href="#" class="hiring__link">
+              <li class="hiring__item">
+                <div class='hiring__item-info'>
+									<span class="hiring__item-info-role">UX/UI Designer</span>
+									<span class="hiring__item-info-location">New York / Full-Time</span>
+								</div>
+                <span class="hiring__item-arrow"><i class="fas fa-chevron-right"></i></span>
+              </li>
+            </a>
           </ul>
         </section>
         <!-- <section class="subscription">
