fix subscription adaptive

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
             </a>
           </ul>
         </section>
-        <!-- <section class="subscription">
+        <section class="subscription">
 					<img
 						class="subscription__image"
 						src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/illustration-window.png"
@@ -654,7 +654,7 @@
 							<a class="subscription__link" href="">Terms of Use.</a>
 						</span>
 					</div>
-				</section> -->
+				</section>
       </main>
       <!-- <footer class="footer">
 				<div class="footer__top">
